--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,65 +5,32 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: laravel-app
     container_name: laravel-app
-    restart: unless-stopped
-    volumes:
-      - storage:/var/www/storage
-      - bootstrap_cache:/var/www/bootstrap/cache
     ports:
-      - "9000:9000"
+      - "8000:8000"  # Map host 8000 to container 8000 (php server)
+    volumes:
+      - .:/var/www
     depends_on:
       - mysql
-    networks:
-      - laravel
-    environment:
-      APP_NAME: ${APP_NAME}
-      APP_DEBUG: ${APP_DEBUG}
-      DB_CONNECTION: ${DB_CONNECTION}
-      DB_HOST: mysql
-      DB_PORT: ${DB_PORT}
-      DB_DATABASE: ${DB_DATABASE}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      APP_KEY: ${APP_KEY}
-      APP_ENV: ${APP_ENV}
-      TZ: America/Los_Angeles # Set timezone here
+    #expose:  # Removing expose, unnecessary now
+    #  - "9000"
 
   mysql:
-    image: mysql:8
+    image: mysql:8.0
     container_name: mysql
     restart: unless-stopped
-    environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
-    volumes:
-      - dbdata:/var/lib/mysql
-    networks:
-      - laravel
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
-    restart: unless-stopped
     ports:
-      - "8080:80"
+      - "3306:3306"
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_DATABASE: my_cms
+      DB_USERNAME: danielz
+      DB_PASSWORD: 1234
+      MYSQL_ROOT_PASSWORD: 1234
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - public_storage:/var/www/public/storage # Share volume with Nginx
-    depends_on:
-      - app
-    networks:
-      - laravel
+      - mysql-data:/var/lib/mysql
 
 volumes:
-  dbdata:       # Database data
-  storage:      # Laravel storage directory
-  bootstrap_cache: # Laravel bootstrap cache directory
-  public_storage:  # User uploaded files or other public files
-
-networks:
-  laravel:
-    driver: bridge
+  mysql-data:
